--- a/verticales/index.html
+++ b/verticales/index.html
@@ -42,7 +42,7 @@
             margin-bottom: 10px;
         }
         </style>
-        <title></title>
+        <title>Señales verticales</title>
     </head>
     <body>
         <div class="caja">
@@ -50,11 +50,14 @@
         </div>
         <div class="caja">
              <a href="index.html" id="dos">Señales Verticales</a>
-        </div>        
+        </div>
+        <div class="caja">
+             <a href= "../obras/" id="tres">Obras de arte</a>
+        </div>      
         <div class="caja">
              <h3>Mapa Señales Verticales</h3>
         </div>
-        <div id="map">
+                <div id="map">
             <div id="popup" class="ol-popup">
                 <a href="#" id="popup-closer" class="ol-popup-closer"></a>
                 <div id="popup-content"></div>
