style(Señales horizontales): cambios generales

--- a/horizontales/index.html
+++ b/horizontales/index.html
@@ -42,14 +42,17 @@
             margin-bottom: 10px;
         }
        </style>
-        <title></title>
+        <title>Señales horizontales</title>
     </head>
     <body>
         <div class="caja">
             <a href="index.html" id="uno">Señales Horizontales</a> 
         </div>
         <div class="caja">
-             <a href= "../" id="dos">Señales Verticales</a>
+             <a href= "../verticales/" id="dos">Señales Verticales</a>
+        </div>
+        <div class="caja">
+             <a href= "../obras/" id="tres">Obras de arte</a>
         </div>
         <div class="caja">
              <h3>Mapa Señales Horizontales</h3>
