style(Obras de arte): título modificado

--- a/obras/index.html
+++ b/obras/index.html
@@ -43,7 +43,7 @@
             margin-bottom: 10px;
         }
         </style>
-        <title></title>
+        <title>Obras de arte</title>
     </head>
     <body>
         <div class="caja">
