style(general): modificaciones generales

--- a/horizontales/index.html
+++ b/horizontales/index.html
@@ -49,7 +49,7 @@
             <a href="index.html" id="uno">Señales Horizontales</a> 
         </div>
         <div class="caja">
-             <a href= "../verticales/" id="dos">Señales Verticales</a>
+             <a href= "http://mapa.devimed.com.co/" id="dos">Señales Verticales</a>
         </div>
         <div class="caja">
              <a href= "../obras/" id="tres">Obras de arte</a>
