--- a/obras/index.html
+++ b/obras/index.html
@@ -50,7 +50,7 @@
             <a href="../horizontales/index.html" id="uno">Señales Horizontales</a>                                     
         </div>
         <div class="caja">
-             <a href="../verticales/index.html" id="dos">Señales Verticales</a>
+             <a href="http://mapa.devimed.com.co/" id="dos">Señales Verticales</a>
         </div>
         <div class="caja">
              <a href= "index.html" id="tres">Obras de arte</a>
