--- a/verticales/index.html
+++ b/verticales/index.html
@@ -49,7 +49,7 @@
             <a href="../horizontales/index.html" id="uno">Señales Horizontales</a>                                     
         </div>
         <div class="caja">
-             <a href="index.html" id="dos">Señales Verticales</a>
+             <a href="http://mapa.devimed.com.co/" id="dos">Señales Verticales</a>
         </div>
         <div class="caja">
              <a href= "../obras/" id="tres">Obras de arte</a>
