--- a/geo/index.html
+++ b/geo/index.html
@@ -1,37 +1,187 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<title>Ejercicio1</title>
+	<title>Mediciones</title>
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="stylesheet" href="css/leaflet.css"><link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"><link rel="stylesheet" href="css/L.Control.Locate.min.css">
+	<link rel="stylesheet" href="css/Control.MiniMap.css" />
+	<link rel="stylesheet" href="css/L.Control.MousePosition.css" />
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
+	<link rel="stylesheet" href="css/qgis2web.css">
 	<style>
-	#map {
-	width: 700px;
-	height: 600px; 
-	}
+	 html, body, #map {
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        margin: 0;
+        }
 	</style>
 </head>
 <body>
 	<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>	
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-	
+    <script src="js/leaflet.js"></script><script src="js/L.Control.Locate.min.js"></script>
+    <script src="js/leaflet.rotatedMarker.js"></script>
+    <script src="js/leaflet.pattern.js"></script>
+    <script src="js/leaflet-hash.js"></script>
+    <script src="js/Autolinker.min.js"></script>
+    <script src="js/rbush.min.js"></script>
+    <script src="js/labelgun.min.js"></script>
+    <script src="js/labels.js"></script>
+	<script src="js/Bing.js"></script>
+	<script src="js/Control.MiniMap.js"type="text/javascript"></script>		
+	<script src="js/L.Control.MousePosition.js"type="text/javascript"></script>	
+    <script src="data/AbsS3_0.js"></script>
+
 	<?php include 'mysql_geojson.php'; ?>
 	
 	<div id ="map"> </div>	
 	
 	<script>
-	var map = L.map('map', {center: [5.91, -74.85],zoom: 16});
+	var map = L.map('map', {center: [5.91, -74.85],zoom: 11});
+	var hash = new L.Hash(map);
+
+	L.control.locate().addTo(map);
+	var BingAerial = new L.BingLayer("Pl2wXFOEKQ0lIT6FDWrM~7S7lA5j_F2sDUhSdCeQVzw~AvN-ATn5N1EQzxbEEBkYWNUYY1AyXIzXPwXex81xLAN1RyJYJaML4e2gD9QTzsIU", {type: "Aerial"});	
+	BingAerial.addTo(map);
+
+	var OpenStreetMap1 = L.tileLayer('http://{s}.www.toolserver.org/tiles/bw-mapnik/{z}/{x}/{y}.png', {
+		attribution: '&copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>',
+		maxZoom: 28
+    });
+
+    var escala = L.control.scale({ position: 'bottomright', imperial: false});
+    map.addControl(escala);
+		
+	var osm2 = new L.TileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {minZoom:0, maxZoom: 13});
+	var miniMap = new L.Control.MiniMap(osm2, { toggleDisplay: true }).addTo(map);
+	L.control.mousePosition().addTo(map);
+
+	function style_vias(feature) {
+            if (feature.properties.Calificacion == 1) {
+                return {
+                opacity: 1,
+                color: 'rgba(255,0,0,1.0)',
+                dashArray: '',
+                lineCap: 'square',
+                lineJoin: 'bevel',
+                weight: 6.0,
+                fillOpacity: 0,
+            }
+            }
+            if (feature.properties.Calificacion == 2 ) {
+                return {
+                opacity: 1,
+                color: 'rgba(255,255,0,1.0)',
+                dashArray: '',
+                lineCap: 'square',
+                lineJoin: 'bevel',
+                weight: 6.0,
+                fillOpacity: 0,
+            }
+            }
+            if (feature.properties.Calificacion == 3 ) {
+                return {
+                opacity: 1,
+                color: 'rgba(153,204,0,1.0)',
+                dashArray: '',
+                lineCap: 'square',
+                lineJoin: 'bevel',
+                weight: 6.0,
+                fillOpacity: 0,
+            }
+            }
+            if (feature.properties.Calificacion == 4 ) {
+                return {
+                opacity: 1,
+                color: 'rgba(62,255,87,1.0)',
+                dashArray: '',
+                lineCap: 'square',
+                lineJoin: 'bevel',
+                weight: 6.0,
+                fillOpacity: 0,
+            }
+            }
+            if (feature.properties.Calificacion == 5 ) {
+                return {
+                opacity: 1,
+                color: 'rgba(21,116,36,1.0)',
+                dashArray: '',
+                lineCap: 'square',
+                lineJoin: 'bevel',
+                weight: 6.0,
+                fillOpacity: 0,
+            }
+            }
+        }
 	
-	var osm = L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
-	
-	var casas = new L.geoJson(null)
+	var casas = new L.geoJson(null, {
+        style: style_vias,
+    });
 	
 	$.getJSON("mysql_geojson.php", function (data) {
 	casas.addData(data);
 	});
 
 	casas.addTo(map);	
+
+
 	
+
+	function style_AbsS3_0_0() {
+        return {
+            pane: 'pane_AbsS3_0',
+            radius: 4.0,
+            opacity: 1,
+            color: 'rgba(0,0,0,1.0)',
+            dashArray: '',
+            lineCap: 'butt',
+            lineJoin: 'miter',
+            weight: 1,
+            fill: true,
+            fillOpacity: 1,
+            fillColor: 'rgba(56,56,221,1.0)',
+        }
+    }
+    map.createPane('pane_AbsS3_0');
+    map.getPane('pane_AbsS3_0').style.zIndex = 400;
+    map.getPane('pane_AbsS3_0').style['mix-blend-mode'] = 'normal';
+    var layer_AbsS3_0 = new L.geoJson(json_AbsS3_0, {
+        attribution: '<a href=""></a>',
+        pane: 'pane_AbsS3_0',
+        pointToLayer: function (feature, latlng) {
+            var context = {
+                feature: feature,
+                variables: {}
+            };
+            return L.circleMarker(latlng, style_AbsS3_0_0(feature));
+    },
+    });
+
+    map.addLayer(layer_AbsS3_0);
+   
+    var i = 0;
+    layer_AbsS3_0.eachLayer(function(layer) {
+        var context = {
+            feature: layer.feature,
+            variables: {}
+        };
+        layer.bindTooltip((layer.feature.properties['Name'] !== null?String('<div style="color: #000000; font-size: 8pt; font-family: \'MS Shell Dlg 2\', sans-serif;">' + layer.feature.properties['Name']) + '</div>':''), {permanent: true, offset: [0, 0], className: 'css_AbsS3_0'});
+        labels.push(layer);
+        totalMarkers += 1;
+          layer.added = true;
+          addLabel(layer, i);
+          i++;
+    });
+
+    var baseMaps = {BingAerial, OpenStreetMap1};
+	L.control.layers(baseMaps,{'<img src="legend/Abscisas_3.png" /> Abscisas': layer_AbsS3_0}).addTo(map);
+
+
 	</script>
 </body>
 </html>
