fix(general): corrección en carga de estilos de íconos para protocolo seguro

--- a/verticales/index.html
+++ b/verticales/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="./resources/ol.css">
         <link rel="stylesheet" href="./resources/ol3-layerswitcher.css">
         <link rel="stylesheet" href="./resources/qgis2web.css">
-        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
         <style>
         html, body {
             background-color: #ffffff;
