actualización mapa mantenimiento
Cargado de abscisado completo y zoom automático a la vía seleccionada

--- a/geo/index.html
+++ b/geo/index.html
@@ -35,7 +35,7 @@
 	<script src="js/Bing.js"></script>
 	<script src="js/Control.MiniMap.js"type="text/javascript"></script>		
 	<script src="js/L.Control.MousePosition.js"type="text/javascript"></script>	
-    <script src="data/AbsS3_0.js"></script>
+    <script src="data/AbsComplet_0.js"></script>
 
 	<?php include 'mysql_geojson.php'; ?>
 	<div id ="map"></div>
@@ -126,17 +126,18 @@
             }
         }
 	
-	var casas = new L.geoJson(null, {
+	var meds = new L.geoJson(null, {
         style: style_vias,
     });
 	
     $.getJSON(`mysql_geojson.php?id_medicion=${id_medicion}&id_tipo_medicion=${id_tipo_medicion}&id_costado=${id_costado}&id_via=${id_via}`, function (data) {
-	   casas.addData(data);
+	   meds.addData(data);
 	});
 
-    console.log(casas)	
-    casas.addTo(map);
-	
+    console.log(meds)	
+    meds.addTo(map);	
+
+
 
 	function style_AbsS3_0_0() {
         return {
@@ -167,8 +168,6 @@
             return L.circleMarker(latlng, style_AbsS3_0_0(feature));
     },
     });
-
-    map.addLayer(layer_AbsS3_0);
    
     var i = 0;
     layer_AbsS3_0.eachLayer(function(layer) {
@@ -176,7 +175,7 @@
             feature: layer.feature,
             variables: {}
         };
-        layer.bindTooltip((layer.feature.properties['Name'] !== null?String('<div style="color: #000000; font-size: 8pt; font-family: \'MS Shell Dlg 2\', sans-serif;">' + layer.feature.properties['Name']) + '</div>':''), {permanent: true, offset: [0, 0], className: 'css_AbsS3_0'});
+        layer.bindTooltip((layer.feature.properties['Name'] !== null?String('<div style="color: #000000; font-size: 8pt; font-family: \'MS Shell Dlg 2\', sans-serif;">' + layer.feature.properties['Name']) + '</div>':''), {permanent: true, offset: [-30, -10], className: 'css_AbsS3_0'});
         labels.push(layer);
         totalMarkers += 1;
           layer.added = true;
@@ -187,6 +186,9 @@
     var baseMaps = {BingAerial, OpenStreetMap1};
 	L.control.layers(baseMaps,{'<img src="legend/Abscisas_3.png" /> Abscisas': layer_AbsS3_0}).addTo(map);
 
+    meds.on('layeradd ', function() {
+        map.fitBounds(meds.getBounds());
+    });
 
 	</script>
 </body>
