--- a/verticales/index.html
+++ b/verticales/index.html
@@ -10,17 +10,56 @@
         <link rel="stylesheet" href="css/qgis2web.css">
 		<link rel="stylesheet" href="css/Control.MiniMap.css" />
 		<link rel="stylesheet" href="css/L.Control.MousePosition.css" />
+        
         <style>
-        html, body, #map {
+        html, body {
+            font-family: Arial;
+            font-size: 0.9em;
+            background-color: #ffffff;
+        }
+        </style>
+
+        <style>
+        .geolocate {
+            top: 65px;
+            left: .5em;
+        }
+        .ol-touch .geolocate {
+            top: 80px;
+        }
+        </style>
+        <style>
+        html, body, #map{
             width: 100%;
             height: 100%;
             padding: 0;
             margin: 0;
         }
-        </style>
-        <title></title>
+
+        .caja {
+            float:left;
+            margin-left:5px; 
+            float: left;
+            margin-left: 60px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+       </style>
+        <title>Señales verticales</title>
     </head>
     <body>
+        <div class="caja">
+            <a href="../horizontales/" id="uno">Señales Horizontales</a> 
+        </div>
+        <div class="caja">
+             <a href= "http://mapa.devimed.com.co/" id="dos">Señales Verticales</a>
+        </div>
+        <div class="caja">
+             <a href= "../obras/" id="tres">Obras de arte</a>
+        </div>
+        <div class="caja">
+             <h3>Mapa Señales verticales</h3>
+        </div>
         <div id="map">
         </div>
         <script src="js/qgis2web_expressions.js"></script>
